--- a/research/ricahrd-li/调研工作.md
+++ b/research/ricahrd-li/调研工作.md
@@ -6,7 +6,7 @@
 
 1. **回顾冯诺依曼架构**
 
-   ![img](C:\Users\RichardHall\Desktop\2019暑期学校\UChicago暑研\1280px-Von_Neumann_Architecture.svg.png)
+   ![img](./images/1280px-Von_Neumann_Architecture.svg.png)
 
    ​				图1   冯诺依曼架构示意图
 
@@ -46,7 +46,7 @@
 
    + 数据流语言表示为有向偶图。它有两种不同的节点, 分别称为链 (Iink)和 动作 (actor), 一个动作表示进行一步运算，其结果由链传送到下一个动作。
 
-     ![1553901626015](C:\Users\RichardHall\AppData\Roaming\Typora\typora-user-images\1553901626015.png)
+     ![1553901626015](./images/快速傅里叶变换.png)
 
    ​                        图三 一个快速傅里叶变换的图
 
@@ -68,11 +68,11 @@
 
      对应的数据流图：
 
-     ![1553902485683](C:\Users\RichardHall\AppData\Roaming\Typora\typora-user-images\1553902485683.png)
+     ![1553902485683](./images/示例.png)
 
 **数据流计算机的结构：**
 
-​    ![1553902706882](C:\Users\RichardHall\AppData\Roaming\Typora\typora-user-images\1553902706882.png)
+​    ![1553902706882](./images/据流计算机结构.png)
 
 + 存储部件
 
