--- a/research/ricahrd-li/调研工作.md
+++ b/research/ricahrd-li/调研工作.md
@@ -40,7 +40,7 @@
 
    
 
-   **数据流语言：**
+   ** 数据流语言：**
 
    + 数据流语言是一种用图表示的机器语言（？），是数据流计算机的基础，通过编码成为机器指令存在于计算机中。
 
@@ -72,7 +72,7 @@
 
 **数据流计算机的结构：**
 
-​    ![1553902706882](./images/据流计算机结构.png)
+​    ![1553902706882](./images/数据流计算机结构.png)
 
 + 存储部件
 
