--- a/research/ricahrd-li/调研工作.md
+++ b/research/ricahrd-li/调研工作.md
@@ -2,13 +2,14 @@
 
 ---
 
-##### 数据流架构与传统冯诺伊曼架构的区别
+### 数据流架构与传统冯诺伊曼架构的区别
+---
 
 1. **回顾冯诺依曼架构**
 
    ![img](./images/1280px-Von_Neumann_Architecture.svg.png)
 
-   ​				图1   冯诺依曼架构示意图
+   ​				                     图1   冯诺依曼架构示意图
 
    **主要特点：**
 
@@ -24,7 +25,7 @@
 
      ![img](https://pic4.zhimg.com/80/v2-8b403bda4f4654ec09f082a3e33f1b13_hd.jpg)
 
-     ​       图二  memory数据读写数据与CPU读写数据差距巨大
+     ​               图二  memory数据读写数据与CPU读写数据差距巨大
 
    - 近年来基于冯诺依曼架构的新式计算机体系虽然采用并行技术，但没有摆脱传统的以控制流为主的设计思想，并行处理能力受限
 
@@ -40,7 +41,7 @@
 
    
 
-   ** 数据流语言：**
+   **数据流语言：**
 
    + 数据流语言是一种用图表示的机器语言（？），是数据流计算机的基础，通过编码成为机器指令存在于计算机中。
 
@@ -48,7 +49,7 @@
 
      ![1553901626015](./images/快速傅里叶变换.png)
 
-   ​                        图三 一个快速傅里叶变换的图
+   ​                                  图三 一个快速傅里叶变换的图
 
    + 指令的执行顺序由“点火规则（firing rule）”决定。以J·B·Dennis 1973年提出的第一个数据流语言方案为例: 1. 节点的每一个输出链上都有记号，而任何输出链上没有记号，则称此节点就绪, 任何就绪的节点可以点火。2. 链的点火是从输入弧上移去记号放到它的每一条输出弧上。3. 一个动作点火是从它的每一输入弧上移去记号，用输入记号传送来的值确定一个结果放在它的输出弧上
 
@@ -88,9 +89,9 @@
 
   ​      
 
-##### 基于冯诺依曼架构的网络包处理模型 
+##### BPF之前的包处理模型及他们与BPF的对比 
+ CSPF
+ NIT
 
 
-
-##### 基于数据流架构的网络包处理模型   
 
