--- a/research/ricahrd-li/调研工作.md
+++ b/research/ricahrd-li/调研工作.md
@@ -67,8 +67,7 @@
      }
      ```
 
-     对应的数据流图：
-
+  对应的数据流图：
      ![1553902485683](./images/示例.png)
 
 **数据流计算机的结构：**
@@ -91,7 +90,7 @@
 
 ## BPF之前的包处理模型及他们与BPF的对比 
 ---
-#### CSPF
+### CSPF
 
 **CMU / Stanford数据包过滤器**（CSPF，1987）是第一个数据包过滤器，并与其他协议栈并行实现。
 
