--- a/discussion/2.md
+++ b/discussion/2.md
@@ -59,6 +59,7 @@ Date & Time: March 27, 20:30 ~ 21:30
 
 - 本课题框架是否充分了
 - JIT 所做的是否已经足够好了，我们要在C的层面去针对优化代码性能，还是要直接操作 eBPF 乃至 SmartNIC 指令，甚至要知道 SmartNIC 指令的硬件细节来优化我们的代码。
+- 我们如何监测我们硬件卸载的程序的速度和延迟
 - 网卡官网上给的 Agilio eBPF Software 等其他工具是否是我们需要的
 - 对我们接下来工作的起步阶段有哪些建议
 - 其他
