--- a/discussion/2.md
+++ b/discussion/2.md
@@ -58,8 +58,8 @@ Date & Time: March 27, 20:30 ~ 21:30
 ## 待询问老师或有待讨论的问题
 
 - 本课题框架是否充分了
-- JIT 所做的是否已经足够好了，我们要在C的层面去针对优化代码性能，还是要直接操作 eBPF 乃至 SmartNIC 指令，甚至要知道 SmartNIC 指令的硬件细节来优化我们的代码。
-- 我们如何监测我们硬件卸载的程序的速度和延迟
-- 网卡官网上给的 Agilio eBPF Software 等其他工具是否是我们需要的
-- 对我们接下来工作的起步阶段有哪些建议
+- JIT 所做的是否已经足够好了，我们要在C的层面去针对优化代码性能，还是要直接操作 eBPF 乃至 SmartNIC 指令，甚至要知道 SmartNIC 指令的硬件细节来优化我们的代码。***已询问：可能会需要去操作指令本身来达到更好的优化效果；关于NFP指令的手册与硬件细节，可以联系中国供应商。***
+- 我们如何监测我们硬件卸载的程序的速度和延迟。***已询问：Intel 有指令可以衡量一段时间之内的较为相对的指令周期时间***
+- 网卡官网上给的 Agilio eBPF Software 等其他工具是否是我们需要的。***已询问：应当是需要的，具体注册过程需要的信息要等网卡到货***
+- 对我们接下来工作的起步阶段有哪些建议。***已询问：可以先搭好服务器环境。***
 - 其他
