--- a/research/ricahrd-li/可行性报告.md
+++ b/research/ricahrd-li/可行性报告.md
@@ -19,7 +19,7 @@
 
 较复杂版本的整个硬件卸载流程图如下：
 
-![quentinblog.width-800](./image/quentinblog.width-800.png)
+![quentinblog.width-800](./images/quentinblog.width-800.png)
 
 1. ***编写程序并获得eBPF字节码***：我们先写好C语言程序，然后通过eBPF的clang(4.0 or 6.0)与LLVM后端将C程序编译成eBPF字节码(Bytecode)，得到elf文件。
 
@@ -74,7 +74,7 @@
 
 - 使用C语言对数据流处理器进行编程的流程图如下：
 
-![1554206639800](./image/1554206639800.png)
+![1554206639800](./images/1554206639800.png)
 
 
 
@@ -90,7 +90,7 @@
     - 然后这些.list file会被下载到一些指定的FPCs上。
 - 使用SDK(Software Development Kit)-IDE的完整开发流程：
 
-![1554206947241](./image/1554206947241.png)
+![1554206947241](./images/1554206947241.png)
 
 
 
