--- a/research/ricahrd-li/可行性报告.md
+++ b/research/ricahrd-li/可行性报告.md
@@ -7,98 +7,141 @@
 
 ------
 
-#### => 本报告 focus on 我们能用哪些工具，这些工具与我们目标之间的关系，突出“可行性”。
+### SmartNIC对eBPF硬件卸载的支持
 
+我们将要使用的SmartNIC已经对eBPF的硬件卸载从硬件到软件做了充分的支持。
 
-
-# 1. Overview the offload path we will take
-
-### ----From C & eBPF bytecode to offload & beyond (Copy from ICS )
-
-------
-
-较复杂版本的整个硬件卸载流程图如下：
+#### SmartNIC 上ebpf hardware offload流程
 
 ![quentinblog.width-800](./images/quentinblog.width-800.png)
 
-1. ***编写程序并获得eBPF字节码***：我们先写好C语言程序，然后通过eBPF的clang(4.0 or 6.0)与LLVM后端将C程序编译成eBPF字节码(Bytecode)，得到elf文件。
+1. 编写程序并获得eBPF字节码：将写好的C语言程序通过eBPF的clang与LLVM后端将C程序编译成eBPF字节码(Bytecode)，得到elf文件。
 
-   - **clang和LLVM**：
+2. 加载入内核：然后通过调用bpf() 系统调用将程序加载到内核中。当程序要被硬件卸载时，我们需要向系统调用传递一个额外的接口索引，以指示将要卸载的设备。
 
-     Clang 是一个C、C++、Objective-C和Objective-C++编程语言的编译器前端。它采用了LLVM作为其后端，而且由LLVM2.6开始，一起发布新版本。
+3. 验证安全性（Verify）：因为eBPF 的代码是跑在内核空间中的，为了保障内核的正常工作，该程序在内核中将会被Verifier验证，确保这个程序一定会终止，不会出现死循环，并且没有任何其他安全问题，
 
-     (目前，支持生成 BPF 伪代码的编译器只有 LLVM 一家，即使是通篇使用 gcc 编译的 Linux 内核，samples 目录下的 eBPF范例也要借用 LLVM 来编译完成)
+4. 使用JIT将eBPF字节码编译成本机指令
 
-     
+5. 硬件卸载（offload）： 包含maps offload 和program offload。
 
-2. ***加载入内核*** ：然后通过调用bpf（）系统调用将程序加载到内核中。对于网络程序，此调用通常由tc filter add或ip link等工具进行*（具体功能待查）*。当程序要被硬件卸载时，我们需要向系统调用传递一个额外的接口索引，以指示将要卸载的设备。
+   ------
 
-3. ***验证安全性（Verify）***：因为eBPF 的代码是跑在内核空间中的，为了保障内核的正常工作，该程序在内核中将会被Verifier验证，确保这个程序一定会终止，不会出现死循环，并且没有任何其他安全问题，
+   ***下面对SmartNIC是怎样支持流程中的每个环节进行展开.***
 
-4. ***使用JIT将eBPF字节码编译成本机指令*** 
+   
 
-   - JIT：
+#### 1.SmartNIC对编程、调试工具链的支持
 
-     
+1. Netronome 提供了bpftool，这是一个重要的调试bpf程序、监视maps内容的工具。能让我们更好地开发bpf程序并卸载到SmartNIC上。
 
-5. ***硬件卸载（offload）*** ： 包含maps offload 和program offload
+   其具有方便用户检查maps中数据结构内容、易于安装、目前仍在不断更新改进等优点。
 
-6. ***运行！~~4.3 !~~***
+​      2. Netronome的Agilio eBPF支持网站（https://help.netronome.com/）还提供了在CX和FX SmartNIC上运行卸载的BPF程序所需的Agilio BPF固件、有关BPF卸载的文档等大量帮助文件。
 
- 
+3. Netronome 提供了完备的工具链：Software Development Kit（SDK）
+   它包含编译器，连接器以及能够精确到到指令周期时间的模拟器（cycle accurate simulator），并将它们集成到了一个综合的开发环境中。SDK在Window平台上有图形化开发环境，在linux平台上可以通过命令行使用。使用SDK，我们可以使用C语言直接对NFP进行编程。并且使用C语言对Agilio SmartNIC进行编程是效率最高的一种方式。
 
-# 2. More about eBPF offload on SmartNIC
+![1554551197196](./images/1554551197196.png)
 
-------
+​     上图中，我们可以使用Network Flow C Compiler，这是是一个经过优化的、适配数据流架构的C编译器，并为C语言提供了一些扩展语法（“extensions”）。
 
-
-
-
-
-# 3. Why to programme the NFP
-
-### ------Whether we need to programme the NFP itself remains to be a question, and I tend to the view that  we just need to deal with the programming of eBPF on the NFP and the eBPF offload
-
-------
-
-- 为了实现用户定制化的数据通路（Data Path）与数据处理功能
-- 为了充分利用Agilio SmartNIC性能，提高数据处理速度
-
-# 4. Programming the NFP with C
-
-------
-
-- ***C语言的高效性***：
-
-  ​     使用C语言对Agilio SmartNIC进行编程是效率最高的一种方式，因为使用C语言可以充分利用Agilio SmartNIC 架构中一些特殊的数据结构。
-
-- 使用C语言对数据流处理器进行编程的流程图如下：
-
-![1554206639800](./images/1554206639800.png)
-
-
-
-- ***NFCC***:  
-  - Network Flow C Compiler，是一个经过优化的、适配数据流架构的C编译器。
-  - NFCC 为C语言提供了一些扩展语法（“extensions”），这些扩展大部分通过给C代码加上特定注释实现。
-  - ***FPC***：
-    - NFP由多个数据流处理核心（FPCs: Flow Processing Cores）组成，而每一个数据流处理核心都是标准化的、基于RISC架构、可被编程的多线程计算核心。NFP与通用CPU的区别是：为了加速包处理，NFP中的FPC都与一系列外部功能单元相连接以实现特定的功能。
-    - 每个FPC上可以运行8个线程，这些线程共享一个内部ALU，每时每刻只能有一个线程处于运转状态。
-    - FPC中的线程调度是非抢占性的，各线程协同工作的方式很简单：必须在上一个线程释放它对FPC的控制后，下一个线程才会运行。这种非抢占式的简单调度方式简化了FPC内部的线程同步问题。
-  - ***流程***：
-    - 用户编写的c程序首先通过NFCC被编译与链接成一个.list file，每一个.list file都代表着一个完整的程序。
-    - 然后这些.list file会被下载到一些指定的FPCs上。
-- 使用SDK(Software Development Kit)-IDE的完整开发流程：
+​     使用SDK(Software Development Kit)-IDE的完整开发流程：
 
 ![1554206947241](./images/1554206947241.png)
 
+#### 2. SmartNIC 对maps offload的支持：
 
+***BPF maps***：
+
+eBPF maps的功能是：在不同的ebpf程序之间、bpf程序与内核程序之间、bpf程序与用户程序之间共享数据，还可以用于记录bpf程序的状态。maps可以理解成是各种程序之间实现通信的一种十分重要的方法。
+
+maps就是一个键值对，它的数据结构是任意的。常用的两种是哈希表maps和数组maps。
+
+maps只能由用户空间中的程序通过bpf系统调用来创建，一个用户程序能够创造多个maps，并通过file descriptors去访问它们的内容。用户程序与ebpf程序都能够更改储存在maps中的内容，而且不同的ebpf程序能够并行访问同一个maps。
 
 ------
 
-#### 参考资料：
+![1554513872147](./images/1554513872147.png)
 
-1. <https://www.netronome.com/blog/ever-deeper-bpf-update-hardware-offload-support/?tdsourcetag=s_pctim_aiomsg>
-2. <https://www.ibm.com/developerworks/cn/linux/l-lo-eBPF-history/index.html>
-3. A thorough introduction to eBPF <https://lwn.net/Articles/740157/>
+为了保持ebpf在offload之后仍能有优秀的实时处理性能，maps可以同样offload到SmartNIC上。
+
+并且maps在offload之后仍然可以被host程序访问，SmartNIC对ebpf maps offload的支持体现在以下几点：
+
+1. 用户程序可以在用户空间读取maps内容，用于调试或者收集数据等
+2. 用户程序可以在用户空间修改maps中存储的数据，比如设置ebpf程序在运行时要使用的参数，如需要阻塞的ip地址的列表等。
+3. 硬件卸载后的ebpf程序可以读取maps中的值，比如说需要从中读取一些必要参数等（table lookups）
+4. 硬件卸载后的ebpf程序可以修改maps中的值。因为这涉及到ebpf程序之间的同步问题，一般情况下需要引入锁，为了提高并发性，SmartNIC提供了一种特别的“写入”原子操作，更快而且更有用。
+
+目前SmartNIC已经支持最常用的数组maps和哈希maps，可以说maps offload的功能已经很齐全并且高效。
+
+下图：Map Offload
+
+![1554549827061](./images/1554549827061.png)
+
+
+
+#### 3. SmartNIC对bpf helper function的支持
+
+***helper function***：
+
+cbpf和ebpf的区别之一就是ebpf程序可以在运行中调用helper functions而cbpf没有这种机制。
+
+bpf helper function 是一类在内核中定义好的函数，bpf程序可以实时调用它们。这些helper functions可以理解成接口，为ebpf程序与内核交互、与它们工作的上下文交互提供了方便。例如，helpers可用于打印调试消息、获取系统时间、与eBPF maps交互、操纵网络数据包等。
+
+------
+
+SmartNIC当然也对helpers提供了必要的支持，并且提供了device-spcific的helpers实现。卸载后的bpf程序可以通过特殊的maps与这些helpers 交互，提高数据处理的效率。
+
+
+
+#### 4. Netronome对eBPF JIT编译器的优化：
+
+   最新发布的eBPF JIT compiler已经可以支持间接逻辑移位与间接算术移位指令等少数在过去不能被编译的bpf指令，同时JIT还可以检查一段指令序列中是否存在可以优化的部分，从而将原指令转化成另一端在机器执行中性能更好的指令。目前JIT仍在不断改进，有望在未来实现对以下功能更好的支持：
+
+- 能够减少最终程序中的指令数量，以获得更好的性能或支持更高的指令总数。
+- 能够通过支持在硬件上执行速度更快的指令来提升程序性能。
+- 能够优化资源使用，例如在堆栈中使用的内存。
+
+![1554554458064](./images/1554554458064.png)
+
+
+
+### 使用SmartNIC与NFP实现纳秒级相应时间的可行性
+
+![1554552503587](./images/1554552503587.png)
+
+上图: SoC Architecture-Conceptual Components
+
+![1554556394420](./images/1554556394420.png)
+
+1. 在传统通用服务器处理器上提升性能的方法已不再适用于现代高速网络包处理。数据中心的网络包处理需要纳秒级的上下文切换速度与极高的并行程度。为了解决这一问题，NFP-4000 使用了高度并行化的数据流处理核心（FPCs: Flow Processing Cores）， 这些FPC是专门为基于数据包和流的处理而构建和优化的。NFP-4000最高支持60FPCs，每个FPC可以支持8线程，因此，NFP-4000可以最多同时处理480个网络包，有着巨大的吞吐量与高效的处理能力。
+2. 内存：NFP-4000支持以分层方式组织多个存储器单元。 内部存储器单元（IMU）支持4MB SRAM，外部存储器单元（EMU）支持3MB的SRAM。 每个存储器单元都支持专用的硬件加速器来提供强大的数据包流处理功能。
+3. ** 发现陈昂已经写了一些,这里可以将他的部分与我的结合起来 **
+
+
+
+### Agilio CX 2x10GbE 的优势
+1. 高效处理能力： Agilio CX SmartNIC是专门为解决现代网络包数据处理问题而设计的，通过有效地硬件卸载虚拟切换过程（vitual switching）可以提高性能并通过取代脆弱的服务器端CPU来降低CAPEX、提高安全性。
+1. 高吞吐量：最多2M的卡上流量，最多500k的通道数。
+2. 易用性：P4 & C 可编程，利于功能快速迭代
+
+
+参考资料：
+
+<https://www.netronome.com/blog/ever-deeper-bpf-update-hardware-offload-support/?tdsourcetag=s_pctim_aiomsg>
+
+maps 概念 <https://prototype-kernel.readthedocs.io/en/latest/bpf/ebpf_maps.html>
+
+对bpf offload的较深讲解，难懂<https://www.netronome.com/media/documents/BPF_HW_offload_deep_dive.pdf>
+
+helpers 的一些概念 <https://github.com/iovisor/bpf-docs/blob/master/bpf_helpers.rst>
+
+对jit的介绍<https://www.netronome.com/media/documents/demystify-ebpf-jit-compiler.pdf>
+
+PB_Agilio_CX_2x10GbE.pdf
+
+
+
+
 
