Add ANOVA in cpp (mostly c)

--- a/discussion/4.md
+++ b/discussion/4.md
@@ -29,4 +29,9 @@ Date & Time: April 28, 18:30 ~ 20:00
 - 对 var_j [ ] 中的每一个元素 var_j [ x ]，判定不等式 Abs[var_j [ x ] - MEANi(var)] > 10 Sqrt[VARi(var)] 是否成立，若成立，total := total+1。
 - 判定 total/50 > 1/100 是否成立，若是，则 i 窗口的结尾应做一个状态分割。若否，则 i 窗口与 j 窗口属于同一状态。
 
-### 方差分析算法（C实现）
+### 方差分析算法（Cpp实现）
+
+***请所有人都仔细阅读一遍整个文件的所有注释和代码！！！***
+
+[ANOVA.cpp](files/ANOVA.cpp)
+
