Rename old ANOVA as ANOVA_v1

--- a/discussion/4.md
+++ b/discussion/4.md
@@ -33,7 +33,7 @@ Date & Time: April 28, 18:30 ~ 20:00
 
 ***请所有人都仔细阅读一遍整个文件的所有注释和代码！！！***
 
-[ANOVA.cpp](files/ANOVA.cpp)
+[ANOVA_v1.cpp](files/ANOVA_v1.cpp)
 
 涉及到的输入文件 [raw.txt](files/raw.txt)
 
@@ -52,9 +52,9 @@ Date & Time: April 28, 18:30 ~ 20:00
 
 #### 陶柯宇：eBPF - C编程（五一放假结束时完成）
 
-对于有如上假定的付佳伟发来的数据包，以提取其中的四个数值（时间戳值，三个浮点数值（但浮点数以64位整数变量来存放）），并将“浮点数”转化为 [ANOVA.cpp](files/ANOVA.cpp) 中要求的精度的整数（26位二进制数，各位权乘以 B-20 ），并计算三轴加速度平方和后存储在“数组 x 中”（使用 Array Map 实现数组 x，x 中的每个元素是54位二进制无符号整数，用`unsigned long long`表示）。
+对于有如上假定的付佳伟发来的数据包，以提取其中的四个数值（时间戳值，三个浮点数值（但浮点数以64位整数变量来存放）），并将“浮点数”转化为 [ANOVA_v1.cpp](files/ANOVA_v1.cpp) 中要求的精度的整数（26位二进制数，各位权乘以 B-20 ），并计算三轴加速度平方和后存储在“数组 x 中”（使用 Array Map 实现数组 x，x 中的每个元素是54位二进制无符号整数，用`unsigned long long`表示）。
 
-同时，对于应当划分状态的时间戳（对应 [ANOVA.cpp](files/ANOVA.cpp) 中唯一的`printf`语句），实现向用户监视返回该时间戳值的方法。
+同时，对于应当划分状态的时间戳（对应 [ANOVA_v1.cpp](files/ANOVA_v1.cpp) 中唯一的`printf`语句），实现向用户监视返回该时间戳值的方法。
 
 总之，该部分任务将真正地处理（或发送）数据包，要涉及到 XDP 或其他东西对数据包的操作。
 
@@ -88,7 +88,7 @@ while (fgets(str,4096,stdin)!=NULL){
 
 **实现如下高精度定义：**
 
-- 高精度数`unsigned long long a[8]`是256位无符号整数 (HignAccuracy256) ，数组中的每一位是64位无符号整数但只使用低32位（这方便我们在做高精度乘法时不溢出），从`a[0]`到`a[7]`依次是较低有效位到较高有效位。该数将替换我们在 [ANOVA.cpp](files/ANOVA.cpp) 中的浮点数。
+- 高精度数`unsigned long long a[8]`是256位无符号整数 (HignAccuracy256) ，数组中的每一位是64位无符号整数但只使用低32位（这方便我们在做高精度乘法时不溢出），从`a[0]`到`a[7]`依次是较低有效位到较高有效位。该数将替换我们在 [ANOVA_v1.cpp](files/ANOVA_v1.cpp) 中的浮点数。
 - 同时实现`a[4]`为128位无符号整数 (HignAccuracy128) 。至于64位以下的无符号整数，直接用`unsigned long long`表示。
 
 **实现如下高精度运算接口：要说明的是，这些函数最后都不会做成函数调用的形式，而会被粘贴进对应的代码段inline处理，故不必过分纠结 &a 这种操作。**
@@ -137,7 +137,7 @@ void compare_256_256(int &flag, HignAccuracy256 a, HignAccuracy256 b){
 
 #### 李喆昊：eBPF - C 编程（五一放假结束时完成）
 
-完成 [ANOVA.cpp](files/ANOVA.cpp) 中的抽样，均值和方差计算，均值的均值、均值的方差、方差的均值、方差的方差的计算代码（或者说就是非陶柯宇涉及到的代码）。涉及到的数组访问调用array map的helper function，涉及到的高精度各种运算调用上述接口，涉及到输入输出的写一行注释跳过即可。
+完成 [ANOVA_v1.cpp](files/ANOVA_v1.cpp) 中的抽样，均值和方差计算，均值的均值、均值的方差、方差的均值、方差的方差的计算代码（或者说就是非陶柯宇涉及到的代码）。涉及到的数组访问调用array map的helper function，涉及到的高精度各种运算调用上述接口，涉及到输入输出的写一行注释跳过即可。
 
 **即要转化如下代码：**
 
