Update 5.md with new pan for tky

--- a/discussion/5.md
+++ b/discussion/5.md
@@ -29,7 +29,7 @@
 
 ## 初步分锅：
 
-考虑到 OSH 时间紧迫与数理方程考试的双重压力，本次锅除非特殊声明，请在 5 月 11 日（星期六）晚24点前完成，组长会尽量考虑到每个人的实际，安排不同的任务并尽可能减小各位的负担。
+考虑到 OSH 时间紧迫与数理方程考试的双重压力，本次锅除非特殊声明，请在 5 月 11 日（星期六）晚24点前完成，组长会尽量考虑到每个人的实际，安排不同的任务并尽可能减小各位的负担。如果提前做完，请提前 push 到大家对应的 code 文件夹。
 
 ### 总体注意事项
 
@@ -55,7 +55,9 @@
 
 随后，将后面的 32 个 double 二进制（都是正数）先存入一个 ull 变量数组 `unsigned long long data[32]` 内。
 
-### 陈昂：浮点——整数格式转化
+同时写一段独立的代码，用来修改 “tag number” 并返回 `XDP_TX`，即无论划不划分状态，都修改 “tag number” 并将修改后的数据包重定向回网卡输入（即使它还会在下一次处理被丢弃，但实现以下以备后续需求的变化）。
+
+### 陈昂：浮点—>整数格式转化
 
 对于上文陶柯宇生成好的数组 `unsigned long long data[32]`，通过位运算等一系列操作，将其转化为存入 ull 的 26 位无符号整数，其中最高位的位权是 2^15，最低位 2^-10。之后将其存入一个 `unsigned long long x[32]` 数组内。
 
