--- a/discussion/5.md
+++ b/discussion/5.md
@@ -55,7 +55,7 @@
 
 随后，将后面的 32 个 double 二进制（都是正数）先存入一个 ull 变量数组 `unsigned long long data[32]` 内。
 
-同时写一段独立的代码，用来修改 “tag number” 并返回 `XDP_TX`，即无论划不划分状态，都修改 “tag number” 并将修改后的数据包重定向回网卡输入（即使它还会在下一次处理被丢弃，但实现以下以备后续需求的变化）。
+同时写一段独立的代码，用来修改 “tag number” 并返回 `XDP_TX`，即无论划不划分状态，都修改 “tag number” 并将修改后的数据包重定向回网卡输入（即使它还会在下一次处理被丢弃，但实现一下以备后续需求的变化）。
 
 ### 陈昂：浮点—>整数格式转化
 
